--- a/기본 개념/재귀 함수.md
+++ b/기본 개념/재귀 함수.md
@@ -11,3 +11,32 @@
 # 예시
 - 팩토리얼 n! : 이전 항을 모두 곱하는것
 - 피보나치 : f(n) = f(n-1) + f(n-2)
+
+# 코드 
+int Factorial(int n)
+{
+	if (n == 0 || n == 1)
+	{
+		return 1;
+	}
+	else
+	{
+		return n * Factorial(n - 1);
+	}
+}
+
+int Fibonacci(int n)
+{
+	if (n == 0)
+	{
+		return 0;
+	}
+	else if (n == 1)
+	{
+		return 1;
+	}
+	else
+	{
+		return Fibonacci(n - 1) + Fibonacci(n - 2);
+	}
+}
