--- a/기본 개념/순열.md
+++ b/기본 개념/순열.md
@@ -1,3 +1,17 @@
 # 경우의수
 - 순서와 상관 있이 뽑는다. (순열)
 - 순서와 상관 없이 뽑는다. (조합)
+
+# 코드
+int main()
+{
+	vector<int> a = { 2, 1, 3, 4, 5 };
+
+	sort(a.begin(), a.end()); // next_permutation을 사용할떄는 무조건 정렬이 되어있어야 한다.
+
+	do
+	{
+
+	} while (next_permutation(a.begin(), a.end())); // next_permutation을 사용할떄는 무조건 정렬이 되어있어야 한다.
+	return 0;
+}
