--- a/기본 개념/조합.md
+++ b/기본 개념/조합.md
@@ -1,5 +1,8 @@
 # 개념
-- 순서와 상관 없이 뽑는다. (조합)
+- 순서와 상관없이 n개 중에서 k개를 뽑는 방법의 수 (조합)
+- 예시) {1, 2, 3} 중에서 2개를 뽑는 경우 {1, 2}, {1, 3}, {2, 3} → 총 3가지
+<img width="199" height="45" alt="image" src="https://github.com/user-attachments/assets/6e58c39f-f29d-4a3b-8c33-10b85e41d77c" />
+
 
 # 코드 
 ## 1. 중첩 for문을 이용한 조합
