--- a/기본 개념/조합.md
+++ b/기본 개념/조합.md
@@ -50,10 +50,10 @@ void Combination(int start, vector<int> b)
     }
 
     // start 이후의 원소들 중에서 선택
-    for (int i = start + 1; i < n; i++)
+    for (int i = start; i < n; i++)
     {
         b.push_back(a[i]);       // i번째 원소 선택
-        Combination(i, b);       // 다음 원소 뽑기 (재귀 호출)
+        Combination(i+1, b);       // 다음 원소 뽑기 (재귀 호출)
         b.pop_back();            // 원소 제거 (백트래킹)
     }
 }
@@ -61,7 +61,7 @@ void Combination(int start, vector<int> b)
 int main()
 {
     vector<int> b; // 선택한 원소들을 담을 벡터
-    Combination(-1, b); // -1에서 시작 → 0부터 탐색 시작
+    Combination(0, b); // -1에서 시작 → 0부터 탐색 시작
 }
 
 ```
