--- a/기본 개념/중복 제거.md
+++ b/기본 개념/중복 제거.md
@@ -1,14 +1,17 @@
 # 개념 및 방법
-1. map을 사용해 중복 제거
-2. unique 함수를 이용한 중복 제거
+- map을 사용해 중복 제거
+- unique 함수를 이용한 중복 제거
 
 # 코드
-
+```
 vector<int> v {1,1,2,2,3,3,5,6,7,8};
 
 inf main()
 {
+  sort(v.begin(), v.end();
+  v.erase(unique(v.begin, v.end(),v.end());
   auto it = unique(v.begin(), v.end());
 
   return 0;
 }
+```
