--- a/기본 개념/시간 복잡도.md
+++ b/기본 개념/시간 복잡도.md
@@ -1,3 +1,19 @@
 # 개념
 시간복잡도란 입력크기에 대해 어떠한 알고리즘이 실행되는데 걸리는 시간으로 주요 로직의 반복횟수를 중점으로 측정
 
+# 코드
+#include<bits/stdc++.h>
+using namespace std;
+int n;
+int main()
+{
+  cin >> n;
+  int a = 0;
+  for(int i = 0; i < n; i++){
+  for(int j = 0; j < i; j++){
+  a += i + j;
+  }
+  }
+  cout << a << '\n';
+  return 0;
+}
